--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
           
             .img-head{
               height: 100px;
-              width:100px;
-              border-style:solid;
-              border-width:4px;
-              border-color:#C5D4E3;
+              width:150px;
             }
           
             /* Video pitch and Action */
@@ -166,7 +163,7 @@
             <div class="row-fluid heading">
                 <div class="span12">
                   <h1>
-                        <img class="img-head" alt="Placeholder" src="http://i.imgur.com/AHuY8ou.jpg">
+                        <img class="img-head" "Placeholder" src="http://i.imgur.com/ZfBK5Zh.jpg">
                         OpenDoor
                   </h1>
                 </div>
@@ -174,7 +171,7 @@
             <div class="row-fluid subheading">
                 <div class="span12" align="center">
                     <p class="lead">
-                        A platform that helps connect 'value seekers' to 'value providers' giving opportunity to monetize ones value and time
+                        A platform that connects 'value seekers' to 'value providers' giving opportunity to monetize ones value and time.
                     </p>
                 </div>
             </div>
@@ -325,7 +322,7 @@
                 <h2> Summary </h2>
                 <div>
                   <p align="left">
-                    <b><i>OpenDoor</i></b> is a platform that creates opportunity for people to easily connect with people they value. And help people with strong social influence to benefit from what they have achieved. The platform unlocks a lot of possibilities and opportunities creating win-win outcomes.
+                    <b><i>OpenDoor</i></b> is a platform that creates opportunity for people to easily connect with people they value. And help people with strong social influence to benefit from what they have achieved. The platform helps open up opportunities creating win-win outcomes.
                   </p>
                 </div>
             </div>
